Adding sold data submit to inventory pages

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -14,21 +14,25 @@
         <div id="create-form" class="none" onmouseenter="closeFields()"></div>
     <div id="display-right" class="display-right">
         <div class="edit-btns-group">
-            <button id="display-form-btn" class="btnchanger" onclick="createForm()">Create A New Item</button>
-            <button id="display_id_btn" class="btnchanger" onclick=idChange()>Change display Item</button>
-            <button id="name_on_btn" class="btnchanger" onclick=NameChange()>Change Name</button>
-            <button id="price_btn" class="btnchanger" onclick=PriceChange()>Change Price</button>
-            <button id="size_btn" class="btnchanger" onclick=sizeChange()>Change Size</button>
-            <button id="serial_number_btn" class="btnchanger" onclick=serialNumberChange()>Change Serial Number</button>
-            <button id="due_date_btn" class="btnchanger" onclick=dueDateChange()>Change Due Date</button>
-            <button id="po_number_btn" class="btnchanger" onclick=poNumberChange()>Change PO Number</button>
-            <button id="description_btn" class="btnchanger" onclick=descriptionChange()>Change Description</button>
-            <button id="instockclicker" class="btnchanger" onclick=inStockChange()>Change In Stock</button>
-
-            <button id="confirm_btn" class="btnchanger" onclick=ConfirmChange()>Change Confirmation Report</button>
-            <button id="picture_btn" class="btnchanger" onclick=PictureChange()>Change Picture</button>
-            <button id="deletebtn" class="btnchanger" onclick=deleteContainer()>Delete Item</button>
-
+            <div id="main-btn-group" class="main-btn-group">
+                <button id="display_id_btn" class="btnchanger" onclick=idChange()>Change display Item</button>
+                <button id="display-form-btn" class="btnchanger" onclick="createForm()">Create A New Item</button>
+                <button class="btnchanger" onclick="">Add/Update Sold</button>
+                <button class="btnchanger" onclick="">Add/Update Shipping</button>
+            </div>
+            <div id="item-update-btn-group" class="none">
+                <button id="name_on_btn" class="btnchanger" onclick=NameChange()>Change Name</button>
+                <button id="price_btn" class="btnchanger" onclick=PriceChange()>Change Price</button>
+                <button id="size_btn" class="btnchanger" onclick=sizeChange()>Change Size</button>
+                <button id="serial_number_btn" class="btnchanger" onclick=serialNumberChange()>Change Serial Number</button>
+                <button id="due_date_btn" class="btnchanger" onclick=dueDateChange()>Change Due Date</button>
+                <button id="po_number_btn" class="btnchanger" onclick=poNumberChange()>Change PO Number</button>
+                <button id="description_btn" class="btnchanger" onclick=descriptionChange()>Change Description</button>
+                <button id="instockclicker" class="btnchanger" onclick=inStockChange()>Change In Stock</button>
+                <button id="confirm_btn" class="btnchanger" onclick=ConfirmChange()>Change Confirmation Report</button>
+                <button id="picture_btn" class="btnchanger" onclick=PictureChange()>Change Picture</button>
+                <button id="deletebtn" class="btnchanger" onclick=deleteContainer()>Delete Item</button>
+            </div>
         </div>
         <div id="main-edit-div">
             <div id='div-change' class='none' >
