--- a/backend/static/css/build.css
+++ b/backend/static/css/build.css
@@ -64,7 +64,7 @@ input {
     margin-top: 40px;
     box-shadow: 5px 5px 25px black;
     border-radius: 10px;
-    max-width: 95%;
+    max-width: 900px;
     margin-left: 2%;
 
 
