--- a/backend/static/css/build.css
+++ b/backend/static/css/build.css
@@ -189,15 +189,15 @@ button {
 
 #e-id {
     position: absolute;
-    top: 20px;
-    left: 64%;
+    top: -40px;
+    left: 250px;
     color: white;
 }
 
 #h1-info-tag {
     position: absolute;
-    top: 20px;
-    left: 45%;
+    top: -40px;
+    left: 0;
     color: white;
 }
 
@@ -249,7 +249,7 @@ button {
 
 .stocking-tag {
     margin-left: 00px;
-    color: red;
+    color: white;
 }
 
 #deletebtn {
@@ -320,7 +320,7 @@ button {
 
 .bottom-display p {
     margin-left: 100px;
-    color: red;
+    color: black;
     font-weight: 1000;
     font-family: Monospace;
 }
