--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -12,58 +12,60 @@
     <div class="total-pages-visits"><p>Total Page Visits: {{ total_visits }}</p></div>
     <div id="container-main" class="container-main">
         <div id="create-form" class="none" onmouseenter="closeFields()"></div>
-    <div id="display-right" class="display-right">
-        <div class="edit-btns-group">
-            <div id="main-btn-group" class="main-btn-group">
-                <button id="display-form-btn" class="btnchanger" onclick="createForm()">Create A New Item</button>
-                <button id="display_id_btn" class="btnchanger" onclick="idChange();closeCreateForm()">Change display Item</button>
-                <button class="btnchanger" onclick="">Add/Update Sold</button>
-                <button class="btnchanger" onclick="">Add/Update Shipping</button>
+        <div id="display-right" class="display-right">
+            <div class="edit-btns-group">
+                <div id="main-btn-group" class="main-btn-group">
+                    <button id="display-form-btn" class="btnchanger" onclick="createForm()">Create A New Item</button>
+                    <button id="display_id_btn" class="btnchanger" onclick="idChange();closeCreateForm()">Change display Item</button>
+                    <button class="btnchanger" onclick="">Add/Update Sold</button>
+                    <button class="btnchanger" onclick="">Add/Update Shipping</button>
+                </div>
+                <div id="item-update-btn-group" class="none">
+                    <button id="name_on_btn" class="btnchanger" onclick=NameChange()>Change Name</button>
+                    <button id="price_btn" class="btnchanger" onclick=PriceChange()>Change Price</button>
+                    <button id="size_btn" class="btnchanger" onclick=sizeChange()>Change Size</button>
+                    <button id="serial_number_btn" class="btnchanger" onclick=serialNumberChange()>Change Serial Number</button>
+                    <button id="due_date_btn" class="btnchanger" onclick=dueDateChange()>Change Due Date</button>
+                    <button id="po_number_btn" class="btnchanger" onclick=poNumberChange()>Change PO Number</button>
+                    <button id="description_btn" class="btnchanger" onclick=descriptionChange()>Change Description</button>
+                    <button id="instockclicker" class="btnchanger" onclick=inStockChange()>Change In Stock</button>
+                    <button id="confirm_btn" class="btnchanger" onclick=ConfirmChange()>Change Confirmation Report</button>
+                    <button id="picture_btn" class="btnchanger" onclick=PictureChange()>Change Picture</button>
+                    <button id="deletebtn" class="btnchanger" onclick=deleteContainer()>Delete Item</button>
+                </div>
             </div>
-            <div id="item-update-btn-group" class="none">
-                <button id="name_on_btn" class="btnchanger" onclick=NameChange()>Change Name</button>
-                <button id="price_btn" class="btnchanger" onclick=PriceChange()>Change Price</button>
-                <button id="size_btn" class="btnchanger" onclick=sizeChange()>Change Size</button>
-                <button id="serial_number_btn" class="btnchanger" onclick=serialNumberChange()>Change Serial Number</button>
-                <button id="due_date_btn" class="btnchanger" onclick=dueDateChange()>Change Due Date</button>
-                <button id="po_number_btn" class="btnchanger" onclick=poNumberChange()>Change PO Number</button>
-                <button id="description_btn" class="btnchanger" onclick=descriptionChange()>Change Description</button>
-                <button id="instockclicker" class="btnchanger" onclick=inStockChange()>Change In Stock</button>
-                <button id="confirm_btn" class="btnchanger" onclick=ConfirmChange()>Change Confirmation Report</button>
-                <button id="picture_btn" class="btnchanger" onclick=PictureChange()>Change Picture</button>
-                <button id="deletebtn" class="btnchanger" onclick=deleteContainer()>Delete Item</button>
-            </div>
-        </div>
-        <div id="main-edit-div">
-            <div id='div-change' class='none' >
-                 <form id='form-price-change' action='/api/api'  method='POST' onsubmit="updateFields(event)">
-                    <!-- <input type='hidden' value='/builder' name='next'> -->
-                {% csrf_token %}
-                     <div id="change-display" class="change-display"></div>
-                 </form>
-            </div>
-            <div id="div-id-change" class="none">
-                <form id="form-id-change" action="/api/api" method="POST" onsubmit="updateFields(event)">
-                    {% csrf_token %}
-                    <!--<input type="hidden" value="/builder" name="next"> -->
-                    <div id="change-display-id" class="change-display"></div>
-                </form>
-                <form id="form-id-change2" class="id-dropdown-form" action="/api/api" method="POST" onsubmit="updateFields(event)">
-                    {% csrf_token %}
-                    <!-- <input type="hidden" value="/builder" name="next"> -->
-                    <select name="id">
-                        <option value="" selected disabled hidden>Choose a Container from the list!</option>
-                        {% for x in dropdown %}
-                        <option value="{{ x.id }}">{{ x.id }} : {{ x.type }}--{{ x.name }} -- {{ x.serial_number }} -- In Stock: {{ x.in_stock }} -- Sold: {{ x.sold }}</option>
-                        {% endfor %}
-                    </select>
+            <div id="main-edit-div">
 
-                    <button type="submit">submit</button>
-                </form>
-            </div>
-            <div class="container-display" id="container-display"></div>
+                <div id='div-change' class='none' >
+                     <form id='form-price-change' action='/api/api'  method='POST' onsubmit="updateFields(event)">
+                        <!-- <input type='hidden' value='/builder' name='next'> -->
+                        {% csrf_token %}
+                         <div id="change-display" class="change-display"></div>
+                     </form>
+                </div>
+                <div id="div-id-change" class="none">
+                    <form id="form-id-change" action="/api/api" method="POST" onsubmit="updateFields(event)">
+                        {% csrf_token %}
+                        <!--<input type="hidden" value="/builder" name="next"> -->
+                        <div id="change-display-id" class="change-display"></div>
+                    </form>
+                    <form id="form-id-change2" class="id-dropdown-form" action="/api/api" method="POST" onsubmit="updateFields(event)">
+                        {% csrf_token %}
+                        <!-- <input type="hidden" value="/builder" name="next"> -->
+                        <select name="id">
+                            <option value="" selected disabled hidden>Choose a Container from the list!</option>
+                            {% for x in dropdown %}
+                            <option value="{{ x.id }}">{{ x.id }} : {{ x.type }}--{{ x.name }} -- {{ x.serial_number }} -- In Stock: {{ x.in_stock }} -- Sold: {{ x.sold }}</option>
+                            {% endfor %}
+                        </select>
+
+                        <button type="submit">submit</button>
+                    </form>
+                </div>
+
+
+            </div><div class="container-display" id="container-display"></div>
         </div>
-    </div>
     </div>
 
     <script>
@@ -81,32 +83,22 @@
                     +'<option value="javelin_odyssey">Javelin-Odyssey</option>'
                     +'<option value="do_not_display">Do Not Display</option>'
                 +'</select>'
-
                   +'<input type="text" name="name" maxlength="200" required="" id="id_name" placeholder="Enter Name**">'
-
                   +'<input type="number" name="serial_number" id="id_serial_number" placeholder="Enter Serial #">'
-
                   +'<input type="text" name="due_date" maxlength="100" id="id_due_date" placeholder="Enter Due Date">'
-
                   +'<input type="text" name="size" maxlength="50" id="id_size" placeholder="Enter Size">'
-
                   +'<textarea name="description" cols="40" rows="10" id="id_description" placeholder="Description/Information goes here"></textarea>'
                 +'<hr>'
-
                   +'<input type="checkbox" name="in_stock" id="id_in_stock">'
                 +'<hr>'
-
                 +'<input type="text" name="po_number" maxlength="50" id="id_po_number" placeholder="Enter PO Number/Date">'
-
                 +'<select name="confirmation_r" id="id_confirmation_r">'
                     +'<option value="" selected>Select a Confirmation Report</option>'
                     {% for x in confirm %}
                         +'<option value="{{ x.id }}">{{ x.key }}</option>'
                     {% endfor %}
                 +'</select>'
-
                 +'<input type="number" name="price" required="" id="id_price" placeholder="Price**">'
-
                 +'<select name="picture" id="id_picture">'
                     +'<option value="" selected>Select a Picture</option>'
                     {% for x in pict %}
@@ -116,6 +108,7 @@
                 +'<button class="submit-new" type="submit">Create New Item</button>'
             +'</form>'
     }
+
     function PictureChange() {
 
             document.getElementById('deletebtn').className = 'btnchanger'
