Adding sold data submit to inventory pages

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -64,8 +64,9 @@
                 </div>
 
 
-            </div><div class="container-display" id="container-display"></div>
+            </div>
         </div>
+        <div class="container-display" id="container-display"></div>
     </div>
 
     <script>
