--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -16,7 +16,7 @@
             <div class="edit-btns-group">
                 <div id="main-btn-group" class="main-btn-group">
                     <button id="display-form-btn" class="btnchanger" onclick="createForm()">Create A New Item</button>
-                    <button id="display_id_btn" class="btnchanger" onclick="idChange();closeCreateForm()">Change display Item</button>
+                    <button id="display_id_btn" class="btnchanger" onclick="idChange();closeCreateForm()">Select Item To Display</button>
                     <button class="btnchanger" onclick="">Add/Update Sold</button>
                     <button class="btnchanger" onclick="">Add/Update Shipping</button>
                 </div>
