--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -15,10 +15,10 @@
         <div id="display-right" class="display-right">
             <div class="edit-btns-group">
                 <div id="main-btn-group" class="main-btn-group">
-                    <button id="display-form-btn" class="btnchanger" onclick="createForm()">Create A New Item</button>
+                    <button id="display-form-btn" class="btnchanger" onclick="createForm();closeUpdateGroup()">Create A New Item</button>
                     <button id="display_id_btn" class="btnchanger" onclick="idChange();closeCreateForm()">Select Item To Display</button>
-                    <button class="btnchanger" onclick="">Add/Update Sold</button>
-                    <button class="btnchanger" onclick="">Add/Update Shipping</button>
+                    <button class="btnchanger" onclick="closeUpdateGroup()">Add/Update Sold</button>
+                    <button class="btnchanger" onclick="closeUpdateGroup()">Add/Update Shipping</button>
                 </div>
                 <div id="item-update-btn-group" class="none">
                     <button id="name_on_btn" class="btnchanger" onclick=NameChange()>Change Name</button>
