--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -153,7 +153,7 @@
                                 <option value="{{ x.inventory_item.id }}">{{ x.inventory_item }}</option>
                             </select>
 
-                            <select name="purchased_by" required id="id_purchased_by">
+                            <select name="purchased_by" required id="id_purchased_by-{{ x.id }}">
                                 <option value="" selected>Choose A Customer</option>
                                 {% for x in customers %}
                                     <option value="{{ x.id }}">{{ x }}</option>
