--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -83,11 +83,21 @@
                     +'<option value="javelin_odyssey">Javelin-Odyssey</option>'
                     +'<option value="do_not_display">Do Not Display</option>'
                 +'</select>'
-                  +'<input type="text" name="name" maxlength="200" required="" id="id_name" placeholder="Enter Name**">'
+                +'<select name="name" required id="id_name">'
+                    +'<option id="" selected>Choose a Name</option>'
+                {% for x in name_options %}
+                    +'<option value="{{ x.id }}">{{ x }}</option>'
+                {% endfor %}
+                + '</select>'
                   +'<input type="number" name="serial_number" id="id_serial_number" placeholder="Enter Serial #">'
                   +'<input type="text" name="due_date" maxlength="100" id="id_due_date" placeholder="Enter Due Date">'
-                  +'<input type="text" name="size" maxlength="50" id="id_size" placeholder="Enter Size">'
-                  +'<textarea name="description" cols="40" rows="10" id="id_description" placeholder="Description/Information goes here"></textarea>'
+                +'<select name="size" required id="id_size">'
+                +'<option id="" selected>Choose a Size (not required)</option>'
+                {% for x in size_options %}
+                    +'<option value="{{ x.id }}">{{ x }}</option>'
+                {% endfor %}
+                + '</select>'
+                +'<textarea name="description" cols="40" rows="10" id="id_description" placeholder="Description/Information goes here"></textarea>'
                 +'<hr>'
                   +'<input type="checkbox" name="in_stock" id="id_in_stock">'
                 +'<hr>'
