--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -89,7 +89,7 @@
                     +'<option value="{{ x.id }}">{{ x }}</option>'
                 {% endfor %}
                 + '</select>'
-                  +'<input type="number" name="serial_number" id="id_serial_number" placeholder="Enter Serial #">'
+                  +'<input type="text" name="serial_number" id="id_serial_number" value="TBD">'
                   +'<input type="text" name="due_date" maxlength="100" id="id_due_date" placeholder="Enter Due Date">'
                 +'<select name="size" id="id_size">'
                 +'<option id="" value="" selected>Choose a Size (not required)</option>'
