--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -72,7 +72,8 @@
     function createForm() {
         document.getElementById('create-form').className = 'div-form'
         document.getElementById('display-form-btn').className = 'none'
-        document.getElementById('create-form').innerHTML = '<form onsubmit="handleFormSubmit(event);createForm()" id="form" class="form" method="POST" action="https://vectorrigs.herokuapp.com/api/builder/" >'
+        document.getElementById('create-form').innerHTML = '<p>* RED Border/Black Background = Required Fields *</p>'
+            +'<form onsubmit="handleFormSubmit(event);createForm()" id="form" class="form" method="POST" action="https://vectorrigs.herokuapp.com/api/builder/" >'
             + '{% csrf_token %}'
                 + '<select name="type" id="id_type">'
                     +'<option value="" disabled selected hidden>Choose Display Page</option>'
@@ -101,7 +102,7 @@
                 +'<hr>'
                   +'<input type="checkbox" name="in_stock" id="id_in_stock">'
                 +'<select name="on_hold" id="id_on_hold">'
-                    +'<option value="" selected>---------</option>'
+                    +'<option value="" selected>Select Customer Hold (Not Required) </option>'
                 {% for x in hold_options %}
                     +'<option value="{{ x.id }}">{{ x }}</option>'
                 {% endfor %}
