--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -171,6 +171,44 @@
             }
 
     }
+
+    function sizeChange() {
+        document.getElementById('deletebtn').className = 'btnchanger'
+        div_id_change.className = 'none'
+        change_display2.innerHTML = ''
+        div_change.className = 'div-change'
+        change_display.innerHTML = "<input type='number' name='id' id='id' placeholder='Enter ID'>"
+            + '<select name="size" id="id_size">'
+                +'<option id="" value="" selected>Choose a Size</option>'
+                {% for x in size_options %}
+                    +'<option value="{{ x.id }}">{{ x }}</option>'
+                {% endfor %}
+                + '</select>'
+            + "<button id='btn' onmouseout='closeFields()' type='submit'>Update Size</button>"
+        if (document.getElementById('e-id')) {
+            document.getElementById('id').defaultValue = document.getElementById('e-id').innerHTML
+        }
+        document.getElementById('size').defaultValue = document.getElementById('size-info').innerHTML
+    }
+
+    function NameChange() {
+        document.getElementById('deletebtn').className = 'btnchanger'
+        div_id_change.className = 'none'
+        change_display2.innerHTML = ''
+        div_change.className = 'div-change'
+        change_display.innerHTML = "<input type='number' name='id' id='id' placeholder='Enter ID'>"
+            + '<select name="name" required id="id_name">'
+            + '<option id="" selected>Choose a Name</option>'
+            {% for x in name_options %}
+                + '<option value="{{ x.id }}">{{ x }}</option>'
+            {% endfor %}
+            + '</select>'
+            + "<button id='btn' onmouseout='closeFields()' type='submit'>Update Name</button>"
+        if (document.getElementById('e-id')) {
+            document.getElementById('id').defaultValue = document.getElementById('e-id').innerHTML
+        }
+        document.getElementById('name').defaultValue = document.getElementById('name-display').innerHTML
+}
     </script>
     <script type="text/javascript" src="{% static 'javascript/build.js' %}"></script>
 {% endblock %}
