transistioning InventoryItem to models

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -177,7 +177,7 @@
         div_id_change.className = 'none'
         change_display2.innerHTML = ''
         div_change.className = 'div-change'
-        change_display.innerHTML = "<input type='number' name='id' id='id' placeholder='Enter ID'>"
+        change_display.innerHTML = "<input type='number' name='id' id='size_id' placeholder='Enter ID'>"
             + '<select name="size" id="id_size">'
                 +'<option id="" value="" selected>Choose a Size</option>'
                 {% for x in size_options %}
@@ -196,7 +196,7 @@
         div_id_change.className = 'none'
         change_display2.innerHTML = ''
         div_change.className = 'div-change'
-        change_display.innerHTML = "<input type='number' name='id' id='id' placeholder='Enter ID'>"
+        change_display.innerHTML = "<input type='number' name='id' id='name_id' placeholder='Enter ID'>"
             + '<select name="name" required id="id_name">'
             + '<option id="" selected>Choose a Name</option>'
             {% for x in name_options %}
