--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -158,6 +158,7 @@
             }
             let fileInput = document.getElementById('files')
             fileInput.addEventListener('change', fileInputChanged)
+            const crsfToken = document.querySelector('#uploadForm input[name=csrfmiddlewaretoken]').value
 
     }
 
@@ -192,6 +193,7 @@
             }
             let fileInput = document.getElementById('files')
             fileInput.addEventListener('change', fileInputChanged)
+            const crsfToken = document.querySelector('#uploadForm input[name=csrfmiddlewaretoken]').value
 
     }
 
