--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -158,6 +158,7 @@
             }
             let fileInput = document.getElementById('files')
             fileInput.addEventListener('change', fileInputChanged)
+            getToken(csrfToken)
 
 
     }
@@ -193,7 +194,7 @@
             }
             let fileInput = document.getElementById('files')
             fileInput.addEventListener('change', fileInputChanged)
-
+            getToken(csrfToken)
 
     }
 
