transistioning InventoryItem to models

--- a/backend/templates/index-admin.html
+++ b/backend/templates/index-admin.html
@@ -12,7 +12,7 @@
     {% block styles %}{% endblock %}
     {% block title %}{% endblock %}
 </head>
-<body onscroll="Scroll()">
+<body>
   <div class="nav-container" {% block js %}{% endblock %}>
         <div class="left-nav">
             <div class="logo" id="logo-div"><img src="{% static 'images/logo.png' %}"></div>
