transistioning InventoryItem to models

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -6,7 +6,7 @@
 {% block title %}
     <title>Build a block</title>
 {% endblock %}
-{% block js %}onclick="closeFields()"{% endblock %}
+{% block js %}onmousenter="closeFields()"{% endblock %}
 
 {% block content %}
     <div class="total-pages-visits"><p>Total Page Visits: {{ total_visits }}</p></div>
